# forensic_rag

./: README.md  config.py  document_processor.py  embedding.py  flagger.py  large_pdf_processor.py  main.py  md_to_pdf.py  ocr_processor.py  ocr_vector_store.py  pyproject.toml
vector_store_drhp/: chunks.json  index.faiss
vector_store_mosaic/: chunks.json  index.faiss
vector_store_rating/: chunks.json  index.faiss
