[project]
name = "test-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "google-genai>=1.5.0",
    "markdown>=3.7",
    "mistralai>=1.5.1",
    "numpy>=2.2.4",
    "openai>=1.66.3",
    "psutil>=7.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
    "weasyprint>=65.0",
]
